--- a/app/assets/stylesheets/plots/_show.scss
+++ b/app/assets/stylesheets/plots/_show.scss
@@ -26,7 +26,7 @@
 
 .scroll-box {
   overflow: auto;
-  height: 300px;
+  height: 276px;
 }
 
 .scroll-box-tab {
